# mirtillo

./: .gitignore  ABOUT.txt  CMakeLists.txt  CODE_STRUCTURE.md  README.md  post-update-mirtillo-setup.sh
scripts/: deploy_to_paperpro.sh  post-setup-update.sh
src/: export.cpp  export.h  json_utils.cpp  json_utils.h  logging.cpp  logging.h  main.cpp  main.cpp.old  model.h  scanner.cpp  scanner.h
